# udemy_rest_api_with_flask

./: README.md  pyproject.toml
src/rest_api_with_flask/: app.py
src/rest_api_with_flask/api/: rest_api.py
src/rest_api_with_flask/entry_points/: main.py
src/rest_api_with_flask/resources/: stores.py
src/rest_api_with_flask/resources/status_codes/: codes.py
